# std-next

./: README.md  app.py  init.py  pyproject.toml  requirements.txt
.arkitekt_next/: builds.yaml  deployments.yaml  manifest.yaml
.arkitekt_next/flavours/vanilla/: Dockerfile
.devcontainer/vanilla/: devcontainer.json
graphql/mikro/queries/: test.graphql
